Updated the template

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <meta content="Idaten is a modular, in-process data store built using ES6 features. The Express of data stores." name="description">
     <script>Flatdoc.run({ fetcher: Flatdoc.github('tmcnab/Idaten') });</script>
 </head>
-<body role='flatdoc'>
+<body role='flatdoc' class="no-literate large-brief">
     <div class='header'>
         <div class='left'>
             <h1>Idaten</h1>
@@ -31,8 +31,8 @@
             </ul>
         </div>
         <div class='right'>
-            <!-- GitHub buttons: see http://ghbtns.com -->
-            <iframe src="http://ghbtns.com/github-btn.html?user=tmcnab&amp;repo=Idaten&amp;type=watch&amp;count=true" allowtransparency="true" frameborder="0" scrolling="0" width="110" height="20"></iframe>
+            <iframe style="margin-top:-14px; width:80px" src="http://ghbtns.com/github-btn.html?user=tmcnab&amp;repo=Idaten&amp;type=watch&amp;count=true" allowtransparency="true" frameborder="0" scrolling="0" width="110" height="20"></iframe>
+            <img src="https://travis-ci.org/tmcnab/Idaten.svg">
         </div>
     </div>
     <div class='content-root'>
